# rest2-ons

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  METHODOLOGY.md  Makefile  QUICKSTART.md  README.md  TROUBLESHOOTING.md  config.example.jsonc  install.sh  main.py  pyproject.toml  pytest.ini  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yaml  lint.yaml  tests.yml
app/: __init__.py  inference.py  parser.py  readers.py  train.py  writers.py
app/internal/: config.py  constants.py
app/services/: radiation.py
app/storage/: __init__.py  base.py  factory.py  local.py  s3.py
app/utils/: data.py  metrics.py  plots.py  utils.py
scripts/: batched_filter_cams_for_study_plants.py  filter_cams_for_study_plants.py  filter_goes_for_study_plants.py  filter_measured_for_study_plants.py  group_processed_files.py
tests/: conftest.py
tests/fixtures/: generate_test_data.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_readers.py  test_storage.py
