[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rest2-ons"
description = "ML generalization of the REST2 radiation with learnable parameters for using with the ECMWF CAMS forecasts, COD forecasts and in-site measured data."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "numpy>=2.3.2",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "pyjson5>=2.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "statsmodels>=0.14.5",
    "boto3>=1.35.0",
    "s3fs>=2024.10.0"
]

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "app/",
  "main.py"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "moto[s3]>=5.1.17",
    "scipy>=1.16.3",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "boto3-stubs>=1.41.3",
    "ruff>=0.14.6",
]

[project.scripts]
rest2-ons = "main:main"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint.isort]
known-first-party = ["app"]